--- a/IsolatedByInheritanceAndOverride-master/IsolatedByInheritanceAndOverride.NunitTest/IsolatedByInheritanceAndOverride.NunitTest.csproj
+++ b/IsolatedByInheritanceAndOverride-master/IsolatedByInheritanceAndOverride.NunitTest/IsolatedByInheritanceAndOverride.NunitTest.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NSubstitute, Version=1.9.1.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
+      <HintPath>..\packages\NSubstitute.1.9.1.0\lib\net45\NSubstitute.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.9.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.9.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -48,6 +51,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IsolatedByInheritanceAndOverride\IsolatedByInheritanceAndOverride.csproj">
+      <Project>{2a927779-3625-4a30-9ca1-31e6539943ca}</Project>
+      <Name>IsolatedByInheritanceAndOverride</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
