--- a/IsolatedByInheritanceAndOverride-master/IsolatedByInheritanceAndOverride.Test/IsolatedByInheritanceAndOverride.Test.csproj
+++ b/IsolatedByInheritanceAndOverride-master/IsolatedByInheritanceAndOverride.Test/IsolatedByInheritanceAndOverride.Test.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ExpectedObjects, Version=2.3.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ExpectedObjects.2.3.4\lib\net40\ExpectedObjects.dll</HintPath>
+    </Reference>
     <Reference Include="Moq, Version=4.2.1510.2205, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
       <Private>True</Private>
