--- a/IsolatedByInheritanceAndOverride-master/IsolatedByInheritanceAndOverride.Test/packages.config
+++ b/IsolatedByInheritanceAndOverride-master/IsolatedByInheritanceAndOverride.Test/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExpectedObjects" version="2.3.4" targetFramework="net40" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net40" />
   <package id="NSubstitute" version="1.8.1.0" targetFramework="net40" />
 </packages>
